<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/ic_home_36pt_2x"
            android:title="@string/home" />
      </group>
    <item android:title="@string/prefen">
        <menu>
        <item
            android:id="@+id/navigation_item_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/nav_item_setting" />
        </menu>
    </item>
    <item android:title="@string/nav_sub_menu">
        <menu>
            <item
                android:icon="@drawable/ic_share"
                android:title="@string/nav_sub_menu_share" />
            <item
                android:icon="@android:drawable/star_off"
                android:title="@string/nav_sub_menu_rate" />
            <item
                android:icon="@drawable/ic_emoticon"
                android:title="@string/nav_sub_menu_about" />
        </menu>
    </item>

</menu>