<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:layout_height="match_parent">
        <StackView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:id="@+id/stack_view"
            android:loopViews="true"
            android:layout_weight="9"
            android:layout_height="wrap_content"/>
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/banner_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:background="#09C"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:text="@string/widget_text"
            tool:text="@string/widget_text"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </LinearLayout>
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/kosong_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:background="#09C"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/kosong_text"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

</FrameLayout>