<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/spacing_xlarge"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/spacing_xlarge"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tx_biografi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="naon we atuh"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="@string/born"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="Born"/>
                <TextView
                    android:id="@+id/tx_born"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    tools:text="Legok hangseur" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="@string/tx_birthplace"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tx_birthplace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    tools:text="Dr. Simanalagy" />
            </TableRow>

        </TableLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:orientation="vertical">
            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/images"
                android:textColor="@color/vpi__bright_foreground_disabled_holo_dark"
                tools:text="Images"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_photo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="2dp"
                android:scrollbars="none" />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>